--- a/libpictureoptions/src/main/AndroidManifest.xml
+++ b/libpictureoptions/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name = "android.hardware.camera.autofocus" />
+    <!--录音-->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
 
     <application
@@ -55,7 +57,7 @@
             android:name=".pictureCamera.PictureCameraActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/picture_camera"></activity>
     </application>
 
 </manifest>
